--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/CoerLI/CoerLi.github.io.git" # you code reposit
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Keep Moving"
-sidebar-avatar: img/about-lih.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/about-lih.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
