--- a/_config.yml
+++ b/_config.yml
@@ -52,15 +52,15 @@ gems: [jekyll-paginate]
 #highlighter: rouge
 #kramdown:
 #  input: GFM                            # use Github Flavored Markdown !important
-markdown: kramdown
-kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-  syntax_highlighter_opts:
-    span:
-      line_numbers: true
-    block:
-      line_numbers: true
-      start_line: 1
+# markdown: kramdown
+# kramdown:
+#  input: GFM                            # use Github Flavored Markdown !important
+#  syntax_highlighter_opts:
+#    span:
+#      line_numbers: true
+#    block:
+#      line_numbers: true
+#      start_line: 1
 
 # 评论系统
 # Disqus（https://disqus.com/）
