--- a/_config.yml
+++ b/_config.yml
@@ -47,20 +47,11 @@ gems: [jekyll-paginate]
 # Markdown settings
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
-# document: http://jekyllrb.com/docs/configuration/#kramdown
-#markdown: kramdown
-#highlighter: rouge
-#kramdown:
-#  input: GFM                            # use Github Flavored Markdown !important
-# markdown: kramdown
-# kramdown:
-#  input: GFM                            # use Github Flavored Markdown !important
-#  syntax_highlighter_opts:
-#    span:
-#      line_numbers: true
-#    block:
-#      line_numbers: true
-#      start_line: 1
+# document: http://jekyllrb.com/docs/configuration/#kramdown#markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
 
 # 评论系统
 # Disqus（https://disqus.com/）
